add max_routes endpoint
